--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -1,8 +1,9 @@
 name: deploy-prod
 
-# on:
-#   push:
-#     branches: [master]
+on:
+  pull_request:
+    # push:
+    branches: [master]
 
 jobs:
   deploy:
