--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -48,7 +48,7 @@ jobs:
           cd ../..
           fs deploy
         env:
-          STACK_NAME: fullstack-production
+          STACK_NAME: fullstack-prod
           NODE_ENV: production
           BLOG_DOMAIN: fullstack.pl,blog.fullstack.pl
           DOMAIN_CERT: arn:aws:acm:us-east-1:761975498781:certificate/02c0ca60-e3bc-4cab-a15c-2443541e2a3c
