--- a/apps/api1/package.json
+++ b/apps/api1/package.json
@@ -7,7 +7,7 @@
     "node": "14.13"
   },
   "scripts": {
-    "start": "node app",
+    "start": "ts-node -T app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
