--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,8 +7,11 @@
     "node": "14.13"
   },
   "scripts": {
-    "start": "ts-node -T app",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "tsc": "tsc --noEmit",
+    "dev": "NODE_ENV=development nodemon",
+    "test": "yarn run tsc && ts-node -T src/create-db && yarn run jest",
+    "build": "rm dist/*; yarn run webpack --progress --color",
+    "jest": "jest"
   },
   "keywords": [],
   "author": "",
