--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -7,6 +7,7 @@
     "@mdx-js/react": "^1.6.18",
     "@types/mdx-js__react": "^1.5.3",
     "@types/react-helmet": "^6.1.0",
+    "@types/react-transition-group": "^4.4.0",
     "babel-plugin-styled-components": "^1.11.1",
     "color2k": "^1.1.0",
     "date-fns": "^2.16.1",
@@ -33,6 +34,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-hook-form": "^6.10.1",
+    "react-transition-group": "^4.4.1",
     "styled-components": "^5.2.0",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75"
@@ -42,8 +45,8 @@
   },
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
-    "dev": "gatsby develop",
+    "build": "GATSBY_API_URL=https://api.fullstack.pl gatsby build",
+    "dev": "GATSBY_API_URL=http://localhost:3000 gatsby develop --port 4000",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
