--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "engines": {
-    "node": "14.13"
+    "node": "12.x"
   },
   "scripts": {
     "tsc": "tsc --noEmit",
