--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {},
   "engines": {
-    "node": "14.13"
+    "node": "12.x"
   },
   "workspaces": [
     "packages/*",
