--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -21,6 +21,7 @@
     "@types/mz": "^0.0.32",
     "@types/node-fetch": "^2.5.4",
     "@types/uuid": "^3.4.6",
+    "@types/vfile-message": "^2.0.0",
     "aws-sdk": "^2.782.0",
     "chokidar": "^3.2.3",
     "dotenv": "^8.2.0",
@@ -31,7 +32,7 @@
     "mz": "^2.7.0",
     "node-fetch": "^2.6.0",
     "nodemon": "^1.19.1",
-    "remeda": "^0.0.23",
+    "remeda": "^0.0.25",
     "ts-jest": "^26.4.3",
     "ts-loader": "^8.0.7",
     "uuid": "^3.3.3",
