--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -8,6 +8,7 @@
     "@types/mdx-js__react": "^1.5.3",
     "@types/react-helmet": "^6.1.0",
     "@types/react-transition-group": "^4.4.0",
+    "@types/vfile-message": "^2.0.0",
     "babel-plugin-styled-components": "^1.11.1",
     "color2k": "^1.1.0",
     "date-fns": "^2.16.1",
