--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -55,3 +55,4 @@ jobs:
           TOPIC_ARN: dummy
           BLOG_DOMAIN: fullstack.pl,blog.fullstack.pl
           DOMAIN_CERT: arn:aws:acm:us-east-1:761975498781:certificate/02c0ca60-e3bc-4cab-a15c-2443541e2a3c
+          FIX_INDEX_LAMBDA_ARN: arn:aws:lambda:us-east-1:761975498781:function:fix-index:1
