deploy curses wip

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -15,7 +15,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "UNLICENSED",
   "dependencies": {
     "@types/jest": "^26.0.15",
     "@types/mz": "^0.0.32",
