--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -4,6 +4,6 @@
   "description": "",
   "scripts": {},
   "author": "Łukasz Sentkiewicz <lukasz@sentkiewicz.pl>",
-  "license": "MIT",
+  "license": "UNLICENSED",
   "devDependencies": {}
 }
