--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "workspaces": [
     "packages/*",
-    "apps/*"
+    "apps/*",
+    "courses"
   ],
   "dependencies": {
     "@types/prettier": "^2.1.5",
