--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
         uses: rrainn/dynamodb-action@v2.0.0
         with:
           port: 8000
-          cors: '*'
+          cors: "*"
 
       - name: Configure sysctl limits
         run: |
@@ -67,12 +67,12 @@ jobs:
           ES_PASSWORD: dummy
           TOPIC_ARN: dummy
           S3_BUCKET_NAME: dummy
-          API_BASE_URL: 'https://api.fullstack.pl'
-          APP_BASE_URL: 'https://fullstack.pl'
+          API_BASE_URL: "https://api.fullstack.pl"
+          APP_BASE_URL: "https://fullstack.pl"
           TPAY_CUSTOMER_ID: 1010
           TPAY_API_KEY: 75f86137a6635df826e3efe2e66f7c9a946fdde1
           TPAY_PASSWORD: demo
-          TPAY_RESULT_EMAIL: 'example@example.org'
+          TPAY_RESULT_EMAIL: "example@example.org"
           GITHUB_CLIENT_ID: dummy
           GITHUB_CLIENT_SECRET: dummy
           GOOGLE_CLIENT_ID: dummy
@@ -107,3 +107,33 @@ jobs:
         run: |
           cd apps/blog
           yarn run build
+  front:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      - uses: actions/cache@v1
+        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
+      - name: Use Node.js 12
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
+
+      - name: install yarn
+        run: yarn install --frozen-lockfile
+
+      - name: test front
+        run: |
+          cd apps/front
+          yarn run test
