--- a/courses/package.json
+++ b/courses/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@types/fs-extra": "^5.1.0",
-    "@types/html-webpack-plugin": "^3.2.3",
+    "@types/html-webpack-plugin": "^3.2.4",
     "@types/mime-types": "^2.1.0",
     "@types/node-fetch": "^2.3.3",
     "@types/tar": "^4.0.3",
@@ -20,7 +20,7 @@
     "aws-sdk": "^2.782.0",
     "clean-webpack-plugin": "^3.0.0",
     "fs-extra": "^8.0.0",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "next",
     "node-fetch": "^2.5.0",
     "raw-loader": "^2.0.0",
     "tar": "^6.0.5",
