--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -1,6 +1,7 @@
 name: deploy-prod
 on:
   push:
+    # pull_request:
     branches: [master]
 
 jobs:
@@ -56,8 +57,10 @@ jobs:
           BLOG_DOMAIN: fullstack.pl,blog.fullstack.pl
           DOMAIN_CERT: arn:aws:acm:us-east-1:761975498781:certificate/02c0ca60-e3bc-4cab-a15c-2443541e2a3c
           FIX_INDEX_LAMBDA_ARN: arn:aws:lambda:us-east-1:761975498781:function:fix-index:1
+          API_URL: 'https://api.fullstack.pl'
           API_BASE_URL: 'https://api.fullstack.pl'
           APP_BASE_URL: 'https://fullstack.pl'
+          PROTECTED_BASE_URL: /
           TPAY_CUSTOMER_ID: ${{ secrets.TPAY_CUSTOMER_ID }}
           TPAY_API_KEY: ${{ secrets.TPAY_API_KEY }}
           TPAY_PASSWORD: ${{ secrets.TPAY_PASSWORD }}
@@ -65,5 +68,5 @@ jobs:
           TPAY_RESULT_EMAIL: ${{ secrets.TPAY_RESULT_EMAIL }}
           GITHUB_CLIENT_ID: ${{ secrets.PROD_GITHUB_CLIENT_ID }}
           GITHUB_CLIENT_SECRET: ${{ secrets.PROD_GITHUB_CLIENT_SECRET }}
-          GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
-          GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
+          GOOGLE_CLIENT_ID: ${{ secrets.PROD_GOOGLE_CLIENT_ID }}
+          GOOGLE_CLIENT_SECRET: ${{ secrets.PROD_GOOGLE_CLIENT_SECRET }}
