--- a/courses/package.json
+++ b/courses/package.json
@@ -11,16 +11,14 @@
   },
   "dependencies": {
     "@types/fs-extra": "^5.1.0",
-    "@types/html-webpack-plugin": "^3.2.3",
     "@types/mime-types": "^2.1.0",
     "@types/node-fetch": "^2.3.3",
     "@types/tar": "^4.0.3",
-    "@types/terser-webpack-plugin": "^5.0.2",
     "@types/webpack-env": "^1.14.0",
     "aws-sdk": "^2.782.0",
     "clean-webpack-plugin": "^3.0.0",
     "fs-extra": "^8.0.0",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "next",
     "node-fetch": "^2.5.0",
     "raw-loader": "^2.0.0",
     "tar": "^6.0.5",
@@ -32,7 +30,6 @@
   },
   "devDependencies": {
     "@types/tmp": "^0.2.0",
-    "@types/webpack-dev-server": "^3.11.0",
     "tmp": "^0.2.1"
   },
   "keywords": [],
