--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -13,6 +13,9 @@
   },
   "license": "UNLICENCED",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.12",
     "@types/react": "^16.9.2",
     "@types/react-content-loader": "^4.0.0",
     "@types/react-dom": "^16.9.0",
