--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -13,12 +13,16 @@
   },
   "license": "UNLICENCED",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.12",
     "@types/react": "^16.9.2",
     "@types/react-content-loader": "^4.0.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-image-crop": "^8.1.2",
     "@types/react-select": "^3.0.10",
     "@types/react-tooltip": "^3.11.0",
+    "@types/tinycolor2": "^1.4.2",
     "@types/typed.js": "^2.0.9",
     "@types/webpack-env": "^1.14.0",
     "clean-webpack-plugin": "^3.0.0",
@@ -43,6 +47,7 @@
     "schema": "*",
     "style-loader": "^1.0.0",
     "styled-components": "^5.2.0",
+    "tinycolor2": "^1.4.2",
     "ts-loader": "^8.0.11",
     "typeless": "^1.7.0",
     "typeless-form": "^1.7.0",
