--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -54,12 +54,12 @@ jobs:
           ES_PASSWORD: ${{ secrets.PROD_ES_PASSWORD }}
           SES_REGION: eu-west-1
           TOPIC_ARN: dummy
-          BLOG_DOMAIN: fullstack.pl,blog.fullstack.pl
+          DOMAIN: fullstack.pl
           DOMAIN_CERT: arn:aws:acm:us-east-1:761975498781:certificate/02c0ca60-e3bc-4cab-a15c-2443541e2a3c
           FIX_INDEX_LAMBDA_ARN: arn:aws:lambda:us-east-1:761975498781:function:fix-index:1
-          API_URL: 'https://api.fullstack.pl'
-          API_BASE_URL: 'https://api.fullstack.pl'
-          APP_BASE_URL: 'https://fullstack.pl'
+          API_URL: "https://api.fullstack.pl"
+          API_BASE_URL: "https://api.fullstack.pl"
+          APP_BASE_URL: "https://fullstack.pl"
           PROTECTED_BASE_URL: /
           TPAY_CUSTOMER_ID: ${{ secrets.TPAY_CUSTOMER_ID }}
           TPAY_API_KEY: ${{ secrets.TPAY_API_KEY }}
@@ -70,3 +70,4 @@ jobs:
           GITHUB_CLIENT_SECRET: ${{ secrets.PROD_GITHUB_CLIENT_SECRET }}
           GOOGLE_CLIENT_ID: ${{ secrets.PROD_GOOGLE_CLIENT_ID }}
           GOOGLE_CLIENT_SECRET: ${{ secrets.PROD_GOOGLE_CLIENT_SECRET }}
+          LANDING_PAGE_ONLY: true
