--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -14,6 +14,7 @@
   "license": "UNLICENCED",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.12",
     "@types/react": "^16.9.2",
