--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -25,6 +25,7 @@
     "chokidar": "^3.2.3",
     "dotenv": "^8.2.0",
     "escape-html": "^1.0.3",
+    "email-templates": "*",
     "jest": "^26.6.3",
     "jest-watch-suspend": "^1.1.2",
     "jest-watch-typeahead": "^0.6.1",
