--- a/packages/deploy/package.json
+++ b/packages/deploy/package.json
@@ -5,20 +5,23 @@
     "ts-node": "ts-node"
   },
   "dependencies": {
-    "@aws-cdk/aws-apigateway": "^1.71.0",
-    "@aws-cdk/aws-apigatewayv2": "^1.71.0",
-    "@aws-cdk/aws-cloudfront": "^1.71.0",
-    "@aws-cdk/aws-dynamodb": "^1.71.0",
-    "@aws-cdk/aws-lambda": "^1.71.0",
-    "@aws-cdk/aws-lambda-event-sources": "^1.71.0",
-    "@aws-cdk/aws-logs": "^1.71.0",
-    "@aws-cdk/aws-logs-destinations": "^1.71.0",
-    "@aws-cdk/aws-s3": "^1.71.0",
-    "@aws-cdk/aws-s3-assets": "^1.71.0",
-    "@aws-cdk/aws-s3-deployment": "^1.71.0",
-    "@aws-cdk/aws-ses": "^1.71.0",
+    "@aws-cdk/aws-apigateway": "^1.75.0",
+    "@aws-cdk/aws-apigatewayv2": "^1.75.0",
+    "@aws-cdk/aws-cloudfront": "^1.75.0",
+    "@aws-cdk/aws-dynamodb": "^1.75.0",
+    "@aws-cdk/aws-ec2": "^1.75.0",
+    "@aws-cdk/aws-ecs": "^1.75.0",
+    "@aws-cdk/aws-ecs-patterns": "^1.75.0",
+    "@aws-cdk/aws-lambda": "^1.75.0",
+    "@aws-cdk/aws-lambda-event-sources": "^1.75.0",
+    "@aws-cdk/aws-logs": "^1.75.0",
+    "@aws-cdk/aws-logs-destinations": "^1.75.0",
+    "@aws-cdk/aws-s3": "^1.75.0",
+    "@aws-cdk/aws-s3-assets": "^1.75.0",
+    "@aws-cdk/aws-s3-deployment": "^1.75.0",
+    "@aws-cdk/aws-ses": "^1.75.0",
     "@aws-cdk/cdk": "^0.36.1",
-    "@aws-cdk/core": "^1.71.0",
+    "@aws-cdk/core": "^1.75.0",
     "@types/node": "^13.1.1"
   }
 }
