--- a/apps/api2/package.json
+++ b/apps/api2/package.json
@@ -15,5 +15,15 @@
   "keywords": [],
   "author": "",
   "license": "UNLICENSED",
-  "dependencies": {}
+  "dependencies": {
+    "@types/body-parser": "^1.19.0",
+    "@types/compression": "^1.7.0",
+    "@types/express": "^4.17.9",
+    "@types/mongodb": "^3.5.34",
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "config": "*",
+    "express": "^4.17.1",
+    "mongodb": "^3.6.3"
+  }
 }
