--- a/apps/api2/package.json
+++ b/apps/api2/package.json
@@ -8,7 +8,7 @@
     "start": "node app",
     "tsc": "tsc --noEmit",
     "dev": "NODE_ENV=development nodemon",
-    "test": "yarn run tsc && ts-node -T src/create-db && yarn run jest",
+    "test": "yarn run tsc && yarn run jest",
     "build": "rm dist/*; yarn run webpack --progress --color",
     "jest": "jest"
   },
@@ -20,10 +20,19 @@
     "@types/compression": "^1.7.0",
     "@types/express": "^4.17.9",
     "@types/mongodb": "^3.5.34",
+    "@types/mz": "^2.7.2",
+    "amqplib": "^0.6.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "config": "*",
+    "email-templates": "*",
     "express": "^4.17.1",
-    "mongodb": "^3.6.3"
+    "jest": "^26.6.3",
+    "jest-watch-suspend": "^1.1.2",
+    "jest-watch-typeahead": "^0.6.1",
+    "mongodb": "^3.6.3",
+    "mz": "^2.7.0",
+    "remeda": "^0.0.27",
+    "ts-jest": "^26.4.4"
   }
 }
