--- a/apps/api2/package.json
+++ b/apps/api2/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node app",
     "tsc": "tsc --noEmit",
-    "dev": "NODE_ENV=development nodemon",
+    "dev": "NODE_ENV=development ts-node-dev --transpile-only src/app",
     "test": "yarn run tsc && yarn run jest",
     "build": "rm dist/*; yarn run webpack --progress --color",
     "jest": "jest"
@@ -16,8 +16,11 @@
   "author": "",
   "license": "UNLICENSED",
   "dependencies": {
+    "@bugsnag/js": "^7.5.3",
+    "@bugsnag/plugin-express": "^7.5.3",
     "@types/body-parser": "^1.19.0",
     "@types/compression": "^1.7.0",
+    "@types/cors": "^2.8.8",
     "@types/express": "^4.17.9",
     "@types/mongodb": "^3.5.34",
     "@types/mz": "^2.7.2",
@@ -25,6 +28,7 @@
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "config": "*",
+    "cors": "^2.8.5",
     "email-templates": "*",
     "express": "^4.17.1",
     "jest": "^26.6.3",
@@ -33,6 +37,7 @@
     "mongodb": "^3.6.3",
     "mz": "^2.7.0",
     "remeda": "^0.0.27",
-    "ts-jest": "^26.4.4"
+    "ts-jest": "^26.4.4",
+    "ts-node-dev": "next"
   }
 }
