--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -13,6 +13,8 @@
   },
   "license": "UNLICENCED",
   "dependencies": {
+    "@bugsnag/js": "^7.5.3",
+    "@bugsnag/plugin-react": "^7.5.3",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
