--- a/apps/api2/package.json
+++ b/apps/api2/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node app",
     "tsc": "tsc --noEmit",
-    "dev": "NODE_ENV=development ts-node-dev --transpile-only src/app",
+    "dev": "(NODE_ENV=development ts-node-dev --transpile-only src/app &); (NODE_ENV=development ts-node-dev --transpile-only src/worker)",
     "test": "yarn run tsc && yarn run jest",
     "build": "rm dist/*; yarn run webpack --progress --color",
     "jest": "jest"
