--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -11,6 +11,6 @@
     "@types/jest": "^24.0.21",
     "jest": "^24.9.0",
     "ts-jest": "^24.1.0",
-    "typescript": "4.0.2"
+    "typescript": "^4.1.2"
   }
 }
