--- a/apps/api2/package.json
+++ b/apps/api2/package.json
@@ -18,12 +18,14 @@
   "dependencies": {
     "@bugsnag/js": "^7.5.3",
     "@bugsnag/plugin-express": "^7.5.3",
+    "@types/amqplib": "^0.5.16",
     "@types/body-parser": "^1.19.0",
     "@types/compression": "^1.7.0",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.9",
     "@types/mongodb": "^3.5.34",
     "@types/mz": "^2.7.2",
+    "@types/uuid": "^8.3.0",
     "amqplib": "^0.6.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
