--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "workspaces": [
     "packages/*",
-    "apps/*",
+    "apps/api2",
+    "apps/front",
     "courses"
   ],
   "dependencies": {
@@ -17,6 +18,6 @@
     "typescript": "^4.1.2"
   },
   "resolutions": {
-    "remark": "11.0.2"
+    "@types/react": "16.14.2"
   }
 }
