--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,11 @@ on:
 jobs:
   api:
     runs-on: ubuntu-latest
+    services:
+      mongodb:
+        image: mongo:4.4.0
+        ports:
+          - 27017:27017
 
     steps:
       - uses: actions/checkout@v2
@@ -29,12 +34,6 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
-
-      - name: Setup DynamoDB Local
-        uses: rrainn/dynamodb-action@v2.0.0
-        with:
-          port: 8000
-          cors: "*"
 
       - name: Configure sysctl limits
         run: |
