--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,11 +7,6 @@ on:
 jobs:
   api:
     runs-on: ubuntu-latest
-    services:
-      mongodb:
-        image: mongo:4.4.0
-        ports:
-          - 27017:27017
 
     steps:
       - uses: actions/checkout@v2
@@ -34,6 +29,12 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
+
+      - name: Start MongoDB
+        uses: supercharge/mongodb-github-action@1.3.0
+        with:
+          mongodb-version: 4.4.0
+          mongodb-replica-set: test-rs
 
       - name: Configure sysctl limits
         run: |
