--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "api2",
+  "name": "api",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "engines": {},
   "scripts": {
-    "start": "node app",
+    "start": "ts-node -T src/app",
+    "start:worker": "ts-node -T src/worker",
     "tsc": "tsc --noEmit",
     "dev": "(NODE_ENV=development ts-node-dev --transpile-only src/app &); (NODE_ENV=development ts-node-dev --transpile-only src/worker)",
     "test": "yarn run tsc && yarn run jest",
