--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -1,9 +1,9 @@
 name: deploy-prod
 on:
-  pull_request:
-    branches: [master]
-  # push:
-  #   branches: [master_master]
+  # pull_request:
+  #   branches: [master]
+  push:
+    branches: [master_master]
 
 jobs:
   deploy:
