--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   ],
   "dependencies": {
     "@types/prettier": "^2.1.5",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
+    "eslint": "^7.14.0",
     "prettier": "^2.1.2",
     "ts-node": "^9.0.0",
     "typescript": "^4.1.2"
