--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -2,15 +2,20 @@
   "extends": "../../base.tsconfig.json",
   "compilerOptions": {
     "noEmit": true,
+    "lib": [ 
+      "es6",
+      "ES2017.object",
+      "ES2016.Array.Include"
+    ],
     "target": "es2018",
     "module": "commonjs"
   },
   "include": [
     "__tests__/**/*",
     "src/**/*",
-    "webpack.config.js",
     "scripts/**/*",
-    "jest.config.js"
+    "jest.config.js",
+    ".eslintrc.js",
   ],
-  "exclude": ["dist"]
+  "exclude": ["dist", "**/@types/react-select"]
 }
