--- a/apps/front-next/.babelrc
+++ b/apps/front-next/.babelrc
@@ -1,2 +1,11 @@
-{ "presets": ["next/babel"], "plugins": [ [ "styled-components", { "ssr": true, "displayName": true } ] ] }
-
+{
+  "presets": [["next/babel", {
+    "preset-env": {},
+    "styled-jsx": {
+      "plugins": ["styled-jsx-plugin-postcss"]
+    }
+  }]],
+  "plugins": [
+    ["styled-components", { "ssr": true, "displayName": true } ] 
+  ]
+}
