--- a/apps/front-next/package.json
+++ b/apps/front-next/package.json
@@ -16,9 +16,11 @@
     "next": "^10.0.3",
     "next-images": "^1.6.2",
     "next-transpile-modules": "^6.0.0",
+    "postcss-nested": "^4.2.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.12.2",
+    "styled-jsx-plugin-postcss": "^4.0.0",
     "use-immer": "^0.4.2"
   }
 }
