--- a/apps/front-next/.babelrc
+++ b/apps/front-next/.babelrc
@@ -1,11 +1,8 @@
 {
-  "presets": [["next/babel", {
-    "preset-env": {},
-    "styled-jsx": {
-      "plugins": ["styled-jsx-plugin-postcss"]
-    }
-  }]],
+  "presets": [
+    ["next/babel"]
+  ],
   "plugins": [
-    ["styled-components", { "ssr": true, "displayName": true } ] 
+    ["styled-components", { "ssr": true, "displayName": true } ]
   ]
 }
