--- a/apps/front-next/package.json
+++ b/apps/front-next/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "ts-node -T --project ./node.tsconfig.json scripts/start",
     "dev": "ts-node -T --project ./node.tsconfig.json scripts/dev",
-    "build": "ts-node -T --project ./node.tsconfig.json scripts/build"
+    "build": "rm -rf ./next && ts-node -T --project ./node.tsconfig.json scripts/build"
   },
   "keywords": [],
   "author": "",
