--- a/apps/front-next/package.json
+++ b/apps/front-next/package.json
@@ -6,19 +6,25 @@
   "scripts": {
     "start": "ts-node -T --project ./node.tsconfig.json scripts/start",
     "dev": "ts-node -T --project ./node.tsconfig.json scripts/dev",
-    "build": "rm -rf ./next && ts-node -T --project ./node.tsconfig.json scripts/build"
+    "build": "rm -rf ./next && ts-node -T --project ./node.tsconfig.json scripts/build",
+    "lint": "eslint . --ext .ts",
+    "jest": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "babel-plugin-styled-components": "^1.12.0",
+    "jest": "^26.6.3",
+    "jest-watch-suspend": "^1.1.2",
+    "jest-watch-typeahead": "^0.6.1",
     "next": "^10.0.3",
     "next-images": "^1.6.2",
     "next-transpile-modules": "^6.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.12.2",
+    "ts-jest": "^26.4.4",
     "use-immer": "^0.4.2"
   }
 }
