--- a/apps/front-next/tsconfig.json
+++ b/apps/front-next/tsconfig.json
@@ -1,22 +1,14 @@
 {
   "extends": "../../base.tsconfig.json",
   "compilerOptions": {
-    "rootDir": "src",
     "baseUrl": ".",
     "noEmit": true,
     "allowJs": true,
     "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve"
+    "isolatedModules": false,
+    "jsx": "react"
   },
   "references": [],
-  "include": [
-    "src",
-    "scripts"
-, "scripts"  ],
-  "exclude": [
-    "tests",
-    "dist",
-    "build"
-  ]
+  "include": ["src", "scripts", "jest.config.js", "__tests__"],
+  "exclude": ["tests", "dist", "build"]
 }
