--- a/apps/front-next/package.json
+++ b/apps/front-next/package.json
@@ -15,6 +15,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
     "babel-plugin-styled-components": "^1.12.0",
     "jest": "^26.6.3",
     "jest-watch-suspend": "^1.1.2",
