--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typescript": "^4.1.2"
   },
   "resolutions": {
-    "@types/react": "16.14.2"
+    "@types/react": "16.14.2",
+    "jest-environment-jsdom": "^26.0.1"
   }
 }
