--- a/apps/front-next/package.json
+++ b/apps/front-next/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node -T --project ./node.tsconfig.json scripts/start",
+    "start:test": "E2E_TESTS=1 yarn run dev",
     "dev": "ts-node -T --project ./node.tsconfig.json scripts/dev",
     "build": "rm -rf ./next && ts-node -T --project ./node.tsconfig.json scripts/build",
     "test": "yarn run lint && yarn run jest",
