--- a/apps/front-next/package.json
+++ b/apps/front-next/package.json
@@ -15,13 +15,27 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/tinycolor2": "^1.4.2",
+    "@types/react-select": "^3.0.10",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-regular-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.12",
     "babel-plugin-styled-components": "^1.12.0",
     "next": "^10.0.3",
+    "styled-components": "^5.2.0",
     "next-images": "^1.6.2",
     "next-transpile-modules": "^6.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.12.2",
+    "react-use": "^15.3.4",
+    "react-confetti": "^6.0.0",
+    "react-select": "^3.0.8",
+    "react-popper": "^1.3.7",
+    "react-select-async-paginate": "^0.3.11",
+    "tinycolor2": "^1.4.2",
+    "immer": "8.0.0",
     "use-immer": "^0.4.2"
   }
 }
