--- a/content/package.json
+++ b/content/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "courses",
+  "name": "content",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.ts",
@@ -7,13 +7,14 @@
   "scripts": {
     "tsc": "tsc --noEmit",
     "test": "yarn run tsc && yarn run jest",
-    "deploy": "ts-node -T src/deployCourse"
+    "deploy": "ts-node -T src/deployModule"
   },
   "dependencies": {
     "@types/fs-extra": "^5.1.0",
     "@types/mime-types": "^2.1.0",
     "@types/node-fetch": "^2.3.3",
     "@types/tar": "^4.0.3",
+    "@types/terser-webpack-plugin": "^5.0.2",
     "@types/webpack-env": "^1.14.0",
     "aws-sdk": "^2.782.0",
     "clean-webpack-plugin": "^3.0.0",
@@ -26,6 +27,7 @@
     "typescript-plugin-styled-components": "^1.4.4",
     "webpack": "^5.3.2",
     "webpack-dev-server": "^3.11.0",
+    "ts-loader": "^8.0.11",
     "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
