--- a/apps/front-next/package.json
+++ b/apps/front-next/package.json
@@ -37,6 +37,7 @@
     "react-popper": "^1.3.7",
     "react-select": "^3.0.8",
     "react-select-async-paginate": "^0.3.11",
+    "react-split-pane": "^0.1.92",
     "react-use": "^15.3.4",
     "styled-components": "^5.2.0",
     "tailwindcss": "^2.0.1",
