--- a/apps/front-next/package.json
+++ b/apps/front-next/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.12",
     "@types/classnames": "^2.2.11",
+    "@types/prismjs": "^1.16.2",
     "@types/react-select": "^3.0.10",
     "@types/tinycolor2": "^1.4.2",
     "autoprefixer": "^10.1.0",
@@ -30,6 +31,7 @@
     "next-images": "^1.6.2",
     "next-transpile-modules": "^6.0.0",
     "postcss": "^8.2.1",
+    "prismjs": "^1.22.0",
     "react": "^17.0.1",
     "react-confetti": "^6.0.0",
     "react-dom": "^17.0.1",
