--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,7 +8,7 @@
     "start:api": "ts-node -T src/app",
     "start:worker": "ts-node -T src/worker",
     "tsc": "tsc --noEmit",
-    "dev": "(NODE_ENV=development ts-node-dev --transpile-only src/app &); (NODE_ENV=development ts-node-dev --transpile-only src/worker)",
+    "dev": "(NODE_ENV=development ts-node --transpile-only src/app &); (NODE_ENV=development ts-node --transpile-only src/worker)",
     "test": "yarn run tsc && yarn run lint && yarn run jest",
     "build": "rm dist/*; yarn run webpack --progress --color",
     "jest": "jest",
