--- a/packages/fullstack-cli/package.json
+++ b/packages/fullstack-cli/package.json
@@ -21,8 +21,6 @@
     "commander": "^4.1.1",
     "mime-types": "^2.1.27",
     "mz": "^2.7.0",
-    "tmp": "^0.1.0",
-    "ts-node": "^8.6.2",
-    "typescript": "^4.1.2"
+    "tmp": "^0.1.0"
   }
 }
