--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -7,10 +7,5 @@
   },
   "author": "Łukasz Sentkiewicz <lukasz@sentkiewicz.pl>",
   "license": "MIT",
-  "devDependencies": {
-    "@types/jest": "^24.0.21",
-    "jest": "^24.9.0",
-    "ts-jest": "^24.1.0",
-    "typescript": "^4.1.2"
-  }
+  "devDependencies": {}
 }
