--- a/content/modules/1-ts-basics/task-1/source/package.json
+++ b/content/modules/1-ts-basics/task-1/source/package.json
@@ -3,8 +3,9 @@
   "scripts": {
     "test": "jest",
     "submit": "jest --reporters=\"default\" --reporters=\"fullstack-tester/dist/SetupReporter.js\"",
-    "submit2": "fs-tester"
+    "submit2": "node /Users/sky/work/fullstack/fullstack-repo/packages-public/fullstack-tester/dist/fs-tester.js 1-ts-basics 1"
   },
+  "license": "UNLICENSED",
   "dependencies": {
     "@types/jest": "^26.0.15",
     "jest": "^26.6.3",
@@ -14,5 +15,9 @@
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node"
+  },
+  "fs": {
+    "moduleId": "1-ts-basics",
+    "taskId": 1
   }
 }
