--- a/content/package.json
+++ b/content/package.json
@@ -23,6 +23,7 @@
     "node-fetch": "^2.5.0",
     "raw-loader": "^2.0.0",
     "tar": "^6.0.5",
+    "fullstack-tester": "*",
     "terser-webpack-plugin": "^5.0.3",
     "typescript-plugin-styled-components": "^1.4.4",
     "webpack": "^5.3.2",
