--- a/content/modules/1-ts-basics/task-1/source/package.json
+++ b/content/modules/1-ts-basics/task-1/source/package.json
@@ -2,15 +2,14 @@
   "name": "middle-number",
   "scripts": {
     "test": "jest",
-    "submit": "jest --reporters=\"default\" --reporters=\"fullstack-tester/dist/SetupReporter.js\"",
-    "submit2": "node /Users/sky/work/fullstack/fullstack-repo/packages-public/fullstack-tester/dist/fs-tester.js 1-ts-basics 1"
+    "submit": "fs-tester"
   },
   "license": "UNLICENSED",
   "dependencies": {
-    "@types/jest": "^26.0.15",
-    "jest": "^26.6.3",
-    "ts-jest": "^26.4.4",
-    "fullstack-tester": "*"
+    "fullstack-tester": "^1.0.0",
+    "jest": "26.6.3",
+    "ts-jest": "26.4.4",
+    "typescript": "4.1.3"
   },
   "jest": {
     "preset": "ts-jest",
