--- a/packages-public/fullstack-tester/package.json
+++ b/packages-public/fullstack-tester/package.json
@@ -16,14 +16,17 @@
   "author": "",
   "license": "UNLICENSED",
   "dependencies": {
+    "chalk": "^4.1.0",
+    "chokidar": "^3.2.3",
+    "form-data": "^3.0.0",
+    "node-fetch": "^2.6.1",
+    "tar": "^6.0.5"
+  },
+  "devDependencies": {
     "@types/mz": "^0.0.32",
     "@types/node-fetch": "^2.5.4",
-    "chokidar": "^3.2.3",
     "javascript-obfuscator": "^2.9.4",
-    "mz": "^2.7.0",
-    "node-fetch": "^2.6.0",
     "nodemon": "^1.19.1",
-    "remeda": "^0.0.25",
     "ts-loader": "^8.0.11",
     "webpack": "^5.3.2",
     "webpack-cli": "^4.2.0",
