--- a/content/modules/1-ts-basics/task-1/source/package.json
+++ b/content/modules/1-ts-basics/task-1/source/package.json
@@ -2,15 +2,21 @@
   "name": "middle-number",
   "scripts": {
     "test": "jest",
-    "submit": "jest"
+    "submit": "fs-tester"
   },
+  "license": "UNLICENSED",
   "dependencies": {
-    "@types/jest": "^26.0.15",
-    "jest": "^26.6.3",
-    "ts-jest": "^26.4.4"
+    "fullstack-tester": "^1.0.0",
+    "jest": "26.6.3",
+    "ts-jest": "26.4.4",
+    "typescript": "4.1.3"
   },
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node"
+  },
+  "fs": {
+    "moduleId": "1-ts-basics",
+    "taskId": 1
   }
 }
