--- a/apps/front-next/package.json
+++ b/apps/front-next/package.json
@@ -41,6 +41,7 @@
     "react-select-async-paginate": "^0.3.11",
     "react-split-pane": "^0.1.92",
     "react-use": "^15.3.4",
+    "reconnecting-websocket": "^4.4.0",
     "styled-components": "^5.2.0",
     "tailwindcss": "^2.0.1",
     "tinycolor2": "^1.4.2",
