--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -28,6 +28,7 @@
     "@types/mongodb": "^3.5.34",
     "@types/mz": "^2.7.2",
     "@types/uuid": "^8.3.0",
+    "@types/ws": "^7.4.0",
     "amqplib": "^0.6.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
@@ -42,6 +43,7 @@
     "mz": "^2.7.0",
     "remeda": "^0.0.27",
     "ts-node": "^9.0.0",
-    "ts-node-dev": "next"
+    "ts-node-dev": "next",
+    "ws": "^7.4.1"
   }
 }
