--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -10,8 +10,7 @@
   "sideEffects": false,
   "dependencies": {
     "prismjs": "^1.16.0",
-    "react-transition-group": "^4.4.1",
-    "styled-components": "^5.2.0"
+    "react-transition-group": "^4.4.1"
   },
   "devDependencies": {
     "@types/react": "^16.9.2",
