--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -29,6 +29,7 @@
     "next": "^10.0.4",
     "next-images": "^1.6.2",
     "next-transpile-modules": "^6.0.0",
+    "plyr": "^3.6.3",
     "postcss": "^8.2.1",
     "prismjs": "^1.22.0",
     "react": "^17.0.1",
