--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,9 +10,9 @@
     "tsc": "tsc --noEmit",
     "dev": "(NODE_ENV=development ts-node --transpile-only src/app &); (NODE_ENV=development ts-node --transpile-only src/worker)",
     "test": "yarn run tsc && yarn run lint && yarn run jest",
-    "build": "rm dist/*; yarn run webpack --progress --color",
     "jest": "jest",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "g": "ts-node -T scripts/generate-client.ts src/contracts/**/*"
   },
   "keywords": [],
   "author": "",
