--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -42,6 +42,7 @@
     "react-split-pane": "^0.1.92",
     "react-use": "^15.3.4",
     "reconnecting-websocket": "^4.4.0",
+    "tailwind-override": "^0.0.7",
     "tailwindcss": "^2.0.1",
     "tinycolor2": "^1.4.2",
     "use-immer": "^0.4.2"
