--- a/packages-public/fullstack-tester/publish/package.json
+++ b/packages-public/fullstack-tester/publish/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fullstack-tester",
-  "version": "1.0.4",
+  "version": "1.0.6",
   "description": "",
   "scripts": {},
   "bin": {
@@ -10,10 +10,10 @@
   "author": "",
   "license": "UNLICENSED",
   "dependencies": {
+    "archiver": "^5.2.0",
     "chalk": "^4.1.0",
     "chokidar": "^3.2.3",
     "form-data": "^3.0.0",
-    "node-fetch": "^2.6.1",
-    "tar": "^6.0.5"
+    "node-fetch": "^2.6.1"
   }
 }
