--- a/content/modules/1-ts-basics/task-24/source/package.json
+++ b/content/modules/1-ts-basics/task-24/source/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "scripts": {
     "test": "jest",
-    "submit": "fs-tester"
+    "test:watch": "jest --watchAll",
+    "submit": "fs-tester",
+    "run": "ts-node -T src/main"
   },
   "license": "UNLICENSED",
   "dependencies": {
