migrate to vimeo

--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -24,6 +24,8 @@
     "@types/prismjs": "^1.16.2",
     "@types/react-select": "^3.0.10",
     "@types/tinycolor2": "^1.4.2",
+    "@types/vimeo__player": "^2.10.0",
+    "@vimeo/player": "^2.15.0",
     "autoprefixer": "^10.1.0",
     "classnames": "^2.2.6",
     "immer": "8.0.0",
@@ -31,7 +33,6 @@
     "next": "^10.0.4",
     "next-images": "^1.6.2",
     "next-transpile-modules": "^6.0.0",
-    "plyr": "^3.6.3",
     "postcss": "^8.2.1",
     "prismjs": "^1.22.0",
     "react": "^17.0.1",
