fix tester deps

--- a/packages-public/fullstack-tester/package.json
+++ b/packages-public/fullstack-tester/package.json
@@ -17,14 +17,15 @@
   "author": "",
   "license": "UNLICENSED",
   "dependencies": {
-    "@types/archiver": "^5.1.0",
     "archiver": "^5.2.0",
     "chalk": "^4.1.0",
     "chokidar": "^3.2.3",
     "form-data": "^3.0.0",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "tar": "^6.1.0"
   },
   "devDependencies": {
+    "@types/archiver": "^5.1.0",
     "@types/mz": "^0.0.32",
     "@types/node-fetch": "^2.5.4",
     "javascript-obfuscator": "^2.9.4",
